--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header [navItems]="navigationItems" (click)="onNavItemClicked($event)"></app-header>
 <app-body>
   <router-outlet></router-outlet>
 </app-body>
