--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,4 @@
 <nav class="top-navigation">
-    <a href="javascript:void(0)" routerLinkActive="active" routerLink="watch-list" >Watch List</a>
-    <a href="javascript:void(0)" routerLinkActive="active" routerLink="trending">Trending</a>
-    <a href="javascript:void(0)"  routerLink="watch-list">Search</a>
-    <a href="javascript:void(0)" routerLinkActive="active" routerLink="about">About</a>
+    <a id="navItem.id" *ngFor="let navItem of navItems" [routerLinkActive]="getNavActiveClass(navItem)"
+        [routerLink]="getNavLink(navItem)" (click)="navClicked($event, navItem)">{{navItem.text}}</a>
 </nav>
