--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,17 +1,22 @@
-
-
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto:wght@100;500&display=swap');
 *{
   margin:0;
   padding: 0;
 }
 
-:host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+.component {
+  border: 1px solid hotpink;
+}
+
+body {
+  font-family: 'PT Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  color: #333;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   }
 
   h1,
@@ -29,4 +34,8 @@
 
   .spacer {
     flex: 1;
+  }
+
+  .mt-1 {
+    margin-top: 1em;
   }
