--- a/src/app/body/body.component.scss
+++ b/src/app/body/body.component.scss
@@ -1,5 +1,9 @@
+@use '../../styles/variables';
+
+$padding: variables.$pad-marg;
 .app-container {
-    background-color: #f2f2f2;
-    min-height: calc(100vh - 100px);
-    padding: 8px 16px;
+  background-color: variables.$background;
+  $r: variables.$header-height + variables.$footer-height;
+  min-height: calc(100vh - #{$r});
+  padding: variables.$footer-height ;
 }
