--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,11 +1,15 @@
+@use '../../styles/variables';
+
 .bottom-footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     border-top: 1px solid #d2d2d2;
-    height: 42px;
+    height: variables.$footer-height;
     width: 100vw;
     text-align: center;
     overflow: hidden;
+    background-color: variables.$primary;
+    color: variables.$secondary;
     p {
         padding: 12px 0;
     }
