--- a/src/app/watch-list/watch-list.component.html
+++ b/src/app/watch-list/watch-list.component.html
@@ -1,4 +1,33 @@
+<button>Hello, I'm button</button>
+<button id="btn">Hello, I'm button #id</button>
+<button class="btn">Hello, I'm button .class</button>
 <ul class="movie-list">
+  <li class="card-v2">
+    <app-card-v2>
+      <app-card-header>
+        <div avatar class="header-image"></div>
+        <header-title>Labrador</header-title>
+        <header-sub-title>Good Boi 🐶</header-sub-title>
+      </app-card-header>
+      <img card-image src="https://www.dogsforgood.org/app/uploads/2013/02/Labrador1.jpg" alt="Photo of a Shiba Inu">
+      <card-content>
+        <p>
+          The Labrador is a member of the gun dog group, which was originally bred to find and retrieve shot game. This
+          means Labradors are often highly motivated to hold objects. From a young age they will pick up and carry their
+          toys. This natural desire to retrieve is particularly useful for anyone who needs help to pick things up at
+          home
+          or retrieve important items like the phone.
+        </p>
+      </card-content>
+      <card-actions>
+        <button class="clear-button">LIKE</button>
+        <button class="clear-button">SHARE</button>
+        <app-button>In card </app-button>
+        <app-button id="btn">In card, #id</app-button>
+        <app-button class="btn">In card, .class</app-button>
+      </card-actions>
+    </app-card-v2>
+  </li>
   <li class="card-v2" *ngFor="let movie of movieList">
     <app-card-v2>
       <app-card-header>
@@ -24,27 +53,5 @@
       </card-actions>
     </app-card-v2>
   </li>
-  <li class="card-v2">
-    <app-card-v2>
-      <app-card-header>
-        <div avatar class="header-image"></div>
-        <header-title>Labrador</header-title>
-        <header-sub-title>Good Boi 🐶</header-sub-title>
-      </app-card-header>
-      <img card-image src="https://www.dogsforgood.org/app/uploads/2013/02/Labrador1.jpg" alt="Photo of a Shiba Inu">
-      <card-content>
-        <p>
-          The Labrador is a member of the gun dog group, which was originally bred to find and retrieve shot game. This
-          means Labradors are often highly motivated to hold objects. From a young age they will pick up and carry their
-          toys. This natural desire to retrieve is particularly useful for anyone who needs help to pick things up at
-          home
-          or retrieve important items like the phone.
-        </p>
-      </card-content>
-      <card-actions>
-        <button class="clear-button">LIKE</button>
-        <button class="clear-button">SHARE</button>
-      </card-actions>
-    </app-card-v2>
-  </li>
+
 </ul>
