authentication Route guard Interceptor login and loader icon components

--- a/src/app/body/body.component.scss
+++ b/src/app/body/body.component.scss
@@ -6,4 +6,5 @@ $padding: variables.$pad-marg;
   $r: variables.$header-height + variables.$footer-height;
   min-height: calc(100vh - #{$r});
   padding: variables.$footer-height ;
+  color: variables.$secondary;
 }
