--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -3,7 +3,7 @@
 .bottom-footer {
     position: fixed;
     bottom: 0;
-    border-top: 1px solid #d2d2d2;
+    border-top: 1px solid rgba(variables.$primary, 0.80);
     height: variables.$footer-height;
     width: 100vw;
     text-align: center;
