--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,16 +1,22 @@
 @use '../../styles/variables';
 
 nav.top-navigation {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    height: variables.$header-height;
-    background-color: variables.$primary;
-    border-bottom: 1px solid #d2d2d2;
-    align-items: center;
-    font-weight: bold;
-    overflow: hidden;
-    color: variables.$secondary;
+    ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        height: variables.$header-height;
+        background-color: variables.$primary;
+        border-bottom: 1px solid rgba(variables.$primary, 0.80);
+        align-items: center;
+        font-weight: bold;
+        overflow: hidden;
+        color: variables.$secondary;
+    }
+    li {
+
+        list-style: none;
+
     a {
         text-decoration: none;
         color:inherit;
@@ -19,7 +25,7 @@ nav.top-navigation {
         color: inherit;
         background-color: inherit;
         text-align: center;
-        padding: 16px 8px;
+        // padding: 16px 8px;
         cursor: pointer;
         &.active {
             &::before{
@@ -27,17 +33,18 @@ nav.top-navigation {
                 display: block;
                 width: inherit;
                 height: 2px;
-                background-color: rgba(variables.$primary, 80%);
+                background-color: rgba(variables.$secondary, 80%);
                 position: relative;
-                top: 30px;
+                top: 22px;
             }
         }
         &:hover {
-            background-color: invert($color: #333);
+            background-color: rgba($color: #fff,$alpha:0.50);
             // @extend .active;
         }
         &:visited{
             color:inherit;
         }
     }
+}
 }
