--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -20,12 +20,13 @@
     padding: 0 16px;
     border-radius: 4px;
     overflow: visible;
-    background-color: $secondary;
-    color: $primary;
+    background-color: transparent;
+    color: $secondary;
+    font-weight: lighter;
     &:not(:first-child){
         margin: 0 8px;
     } 
     &:hover {
-        background-color: $primary-5;
+        background-color: rgba($color: $secondary, $alpha: 0.50);
     }   
 }
