--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto:wght@100;500&display=swap');
 @import './variables';
 @import './button';
+@import './loading';
 
 *{
   margin:0;
@@ -41,4 +42,8 @@ body {
 
   .mt-1 {
     margin-top: 1em;
+  }
+
+  .background {
+    color: rgba(#000, 0.87);
   }
